@@ -21,6 +21,7 @@
 */
 
 #include "base.h"
+#include "b-complain.h"
 
 /* Map of character types: ISO 8859/1 (Latin-1).  */
 const enum tokens const ctab[] =
@@ -58,5 +59,82 @@ const enum tokens const ctab[] =
     Letter, Letter, Letter, Letter, Letter, Letter, Letter, IDCHAR,
     Letter, Letter, Letter, Letter, Letter, Letter, Letter, Letter
   };
+
+static char const *
+checkidentifier (char const *id, int delimiter, register bool dotok)
+/* Check whether the string starting at ‘id’ is an identifier and return
+   a pointer to the delimiter after the identifier.  White space,
+   ‘delimiter’ and 0 are legal delimiters.  Abort the program if not a
+   legal identifier.  Useful for checking commands.  If ‘!delimiter’,
+   the only delimiter is 0.  Allow '.' in identifier only if ‘dotok’ is
+   set.  */
+{
+  register char const *temp;
+  register char c;
+  register char delim = delimiter;
+  bool isid = false;
+
+  temp = id;
+  for (;; id++)
+    {
+      switch (ctab[(unsigned char) (c = *id)])
+        {
+        case IDCHAR:
+        case LETTER:
+        case Letter:
+          isid = true;
+          continue;
+
+        case DIGIT:
+          continue;
+
+        case PERIOD:
+          if (dotok)
+            continue;
+          break;
+
+        default:
+          break;
+        }
+      break;
+    }
+  if (!isid || (c && (!delim || (c != delim
+                                 && c != ' '
+                                 && c != '\t'
+                                 && c != '\n'))))
+    {
+      while ((c = *id) && c != ' ' && c != '\t' && c != '\n'
+             && c != delim)
+        id++;
+      PFATAL ("Zinvalid %s `%.*s'", dotok ? "identifier" : "symbol",
+              id - temp, temp);
+    }
+  return id;
+}
+
+char const *
+checkid (char const *id, int delimiter)
+{
+  return checkidentifier (id, delimiter, true);
+}
+
+char const *
+checksym (char const *sym, int delimiter)
+{
+  return checkidentifier (sym, delimiter, false);
+}
+
+void
+checksid (char const *id)
+/* Check whether the string ‘id’ is an identifier.  */
+{
+  checkid (id, 0);
+}
+
+void
+checkssym (char const *sym)
+{
+  checksym (sym, 0);
+}
 
 /* rcsmap.c ends here */
